seaqt/QtMultimedia/gen_qmediaavailabilitycontrol.h

class QMediaAvailabilityControl;
class QMetaMethod;
class QMetaObject;
class QObject;
typedef struct QMediaAvailabilityControl QMediaAvailabilityControl;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
QMetaObject* QMediaAvailabilityControl_metaObject(const QMediaAvailabilityControl* self);
void* QMediaAvailabilityControl_metacast(QMediaAvailabilityControl* self, const char* param1);
int QMediaAvailabilityControl_metacall(QMediaAvailabilityControl* self, int param1, int param2, void** param3);
struct miqt_string QMediaAvailabilityControl_tr(const char* s);
struct miqt_string QMediaAvailabilityControl_trUtf8(const char* s);
int QMediaAvailabilityControl_availability(const QMediaAvailabilityControl* self);
void QMediaAvailabilityControl_availabilityChanged(QMediaAvailabilityControl* self, int availability);
void QMediaAvailabilityControl_connect_availabilityChanged(QMediaAvailabilityControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
struct miqt_string QMediaAvailabilityControl_tr2(const char* s, const char* c);
struct miqt_string QMediaAvailabilityControl_tr3(const char* s, const char* c, int n);
struct miqt_string QMediaAvailabilityControl_trUtf82(const char* s, const char* c);
struct miqt_string QMediaAvailabilityControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QMediaAvailabilityControl_staticMetaObject();